# inoa_challenge

./: .env.example  .flake8  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: .coveragerc  celery_worker.py  conftest.py  manage.py
app/brapi_api/: apps.py  requests.py  serializers.py  services.py  viewsets.py
app/brapi_api/tests/: conftest.py  test_viewsets.py
app/brapi_api/tests/json/: quote.json  quote_list.json
app/core/: models.py  networking.py
app/inoa_challenge/: asgi.py  routers.py  settings.py  test_settings.py  urls.py  wsgi.py
app/stocks/: admin.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  viewsets.py
app/stocks/migrations/: 0001_initial.py  0002_auto_20230815_1201.py  0003_auto_20230816_2217.py
app/stocks/tests/: test_viewsets.py
docker/: Dockerfile
docker/utils/: entrypoint.sh  wait_for_postgres.py
